urisourcebin: Do not modify structure of EOS event

https://bugzilla.gnome.org/show_bug.cgi?id=795981